--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
-version: '3.4'
+version: "3.4"
 services:
   trustlines.dnp.dappnode.eth:
-    image: 'trustlines.dnp.dappnode.eth:0.0.1'
+    image: "trustlines.dnp.dappnode.eth:0.1.0"
     build: ./build
-    ports: 
-      - 30300 
-      - 30300/udp
+    ports:
+      - "30300"
+      - "30300/udp"
     volumes:
-      - 'data:/data'
-      - 'config:/config/custom'
+      - "data:/data"
+      - "config:/config/custom"
     environment:
       - ROLE=observer
       - ADDRESS=
