--- a/releases.json
+++ b/releases.json
@@ -1,9 +1,9 @@
 {
   "0.0.1": {
-    "hash": "/ipfs/QmNwuhjH7Wv3m5y9wgLnXpzNsGPmasUi9PHRBtytRdaBYP",
-    "type": "manifest",
+    "hash": "/ipfs/QmaoCZkST5pHfbjVx5yR5bJyhXSrNrdmYNhkND1LCimii8",
+    "type": "directory",
     "uploadedTo": {
-      "dappnode": "Thu, 26 Sep 2019 14:16:44 GMT"
+      "dappnode": "Mon, 18 Nov 2019 15:49:18 GMT"
     }
   }
 }
