--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -1,20 +1,13 @@
 {
   "name": "trustlines.dnp.dappnode.eth",
   "version": "0.1.0",
-  "upstreamVersion": "release4044",
+  "upstreamVersion": "release20421",
   "shortDescription": "Financial inclusion through OS decentralized systems",
   "description": "The Trustlines Protocol aims to provide the service of “transfer of value” without actually transferring value. This can be accomplished by leveraging networks of mutual-trust. The Trustlines Protocol is being built to support a range of use cases by leveraging existing networks of mutual trust and mapping trust-based relationships onto trustless infrastructure",
-  "avatar": "/ipfs/QmcpEAc5CsaSD5jc1rkmiGtjtpxDaWDMHUWWh2tUgXFhDC",
   "type": "service",
   "requirements": {
-    "minimumDappnodeVersion": "0.2.10"
+    "minimumDappnodeVersion": "0.2.19"
   },
-  "backup": [
-    {
-      "name": "config",
-      "path": "/config"
-    }
-  ],
   "style": {
     "featuredBackground": "linear-gradient(67deg, #140a0a, #512424)",
     "featuredColor": "white"
@@ -27,6 +20,7 @@
   "links": {
     "homepage": "https://github.com/dappnode/DAppNodePackage-trustlines#readme",
     "trustlines": "https://trustlines.network",
+    "netstats": "https://netstats.tlbc.trustlines.foundation",
     "explorer": "https://explorelaika.trustlines.foundation"
   },
   "repository": {
