--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -20,9 +20,8 @@
   "links": {
     "homepage": "https://trustlines.network",
     "readme": "https://github.com/dappnode/DAppNodePackage-trustlines#readme",
-    "trustlines": "https://trustlines.network",
     "netstats": "https://netstats.tlbc.trustlines.foundation",
-    "explorer": "https://explorelaika.trustlines.foundation"
+    "explorer": "https://explore.tlbc.trustlines.foundation"
   },
   "repository": {
     "type": "git",
