--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -5,6 +5,7 @@
   "shortDescription": "Financial inclusion through OS decentralized systems",
   "description": "The Trustlines Protocol aims to provide the service of “transfer of value” without actually transferring value. This can be accomplished by leveraging networks of mutual-trust. The Trustlines Protocol is being built to support a range of use cases by leveraging existing networks of mutual trust and mapping trust-based relationships onto trustless infrastructure",
   "type": "service",
+  "chain": "ethereum",
   "requirements": {
     "minimumDappnodeVersion": "0.2.19"
   },
@@ -30,5 +31,10 @@
   "bugs": {
     "url": "https://github.com/dappnode/DAppNodePackage-trustlines/issues"
   },
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "runOrder": ["trustlines.dnp.dappnode.eth","trustlines-monitor.dnp.dappnode.eth"],
+  "dependencies" : {
+    "trustlines-monitor.dnp.dappnode.eth":"latest"
+  }
 }
+
