--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -1,6 +1,6 @@
 {
   "name": "trustlines.dnp.dappnode.eth",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "upstreamVersion": "release21542",
   "shortDescription": "Financial inclusion through OS decentralized systems",
   "description": "Trustlines node to participate and securitize the network.\n\nThe Trustlines Protocol aims to provide the service of “transfer of value” without actually transferring value. This can be accomplished by leveraging networks of mutual-trust. The Trustlines Protocol is being built to support a range of use cases by leveraging existing networks of mutual trust and mapping trust-based relationships onto trustless infrastructure",
@@ -17,9 +17,7 @@
   "contributors": [
     "Eduardo Antuña <eduadiez@gmail.com> (https://github.com/eduadiez)"
   ],
-  "categories": [
-    "Blockchain"
-  ],
+  "categories": ["Blockchain"],
   "mainService": "node",
   "links": {
     "homepage": "https://trustlines.network",
