Update tlbc image to release27370

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - ROLE=observer
       - ADDRESS=
       - PASSWORD=
-      - PARITY_ARGS=
+      - CLIENT_ARGS=
     restart: unless-stopped
     ports:
       - "30302"
