--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,6 @@
 name: "Main"
 on:
+  workflow_dispatch:
   pull_request:
   push:
     branches:
@@ -11,21 +12,23 @@ on:
 
 jobs:
   build-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04
     name: Build test
-    if: github.event_name != 'push' || github.event_name == 'repository_dispatch'
+    if: github.event_name != 'push' || github.event_name == 'repository_dispatch'
     steps:
-      - uses: actions/checkout@v2
-      - run: npx @dappnode/dappnodesdk build --skip_save
+      - name: Checkout
+        uses: actions/checkout@v2
+      - run: npx @dappnode/dappnodesdk build --provider remote
 
   release:
     name: Release
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event_name == 'repository_dispatch'
+    if: github.event_name == 'push'  || github.event_name == 'repository_dispatch'
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
       - name: Publish
-        run: npx @dappnode/dappnodesdk publish patch --dappnode_team_preset
+        run: npx @dappnode/dappnodesdk publish patch --dappnode_team_preset --timeout 2h
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEVELOPER_ADDRESS: "0xf35960302a07022aba880dffaec2fdd64d5bf1c1"
